[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.2",
    "httpx>=0.28.1",
    "psutil>=7.2.2",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
    "python-json-logger>=2.0.7",
    "aiosqlite>=0.22.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "bandit>=1.7.0",
]
